--- a/src/scss/proyectos/_proyectos.scss
+++ b/src/scss/proyectos/_proyectos.scss
@@ -21,6 +21,7 @@
       text-align: center;
       text-transform: uppercase;
       color: v.$secundario;
+      letter-spacing: 8;
     }
     
     &__dropdown {
