--- a/src/scss/contacto/_contacto.scss
+++ b/src/scss/contacto/_contacto.scss
@@ -4,18 +4,31 @@
 .contacto {
     background-color: #e1e1e1;   
     padding: 10rem;
-
+    background-image: linear-gradient(to top,rgba(48, 48, 48, 0.8), rgba(0, 0, 0, 0.9))
+    ,url(../img/contacto.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    
     &__titulo {
         text-align: center;
         text-transform: uppercase;
         color: v.$secundario;
         margin: 0;
+        font-family: v.$fuenteSecundaria;
+        letter-spacing: 10;
+        text-shadow: 1px -1px 9px rgba(255,255,255,0.4);
     }
 
     &__formulario {
-        background-color: darken(v.$principal,20%); 
+        height: 60rem;
+        background-image: linear-gradient(to bottom,rgba(48, 48, 48, 0.8), rgba(0, 0, 0, 0.9))
+        ,url(../img/contacto.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-color: bottom bottom;
         margin: 5rem auto;
-        padding: 5rem;
+        padding: 2rem 8rem;
         display: grid;
         width: 70rem;
         box-shadow: 1px 1px 20px rgb(0,0,0,0.6);
@@ -23,20 +36,37 @@
     }
 
     &__label {
-        text-transform: uppercase;
         color: v.$secundario;
         font-size: 1.8rem;
         font-weight: 700;
+        font-family: v.$fuenteSecundaria;
+        letter-spacing: 1.2;
     }
 
-    &__text {
-        margin-top: 1rem;
-    }
     &__input {
         margin: 1rem 0;
         border-radius: 5px;
     }
+
+    &__text {
+        margin: 1rem 0;
+    }
     &__submit {
-        
+        padding: .5rem 2.5rem;
+        text-align: left;
+        border-radius: 1rem;
+        width: max-content;
+        margin: 2rem 0;
+        font-size: 2rem;
+        font-weight: 700;
+        font-family: v.$fuenteSecundaria;
+        color: v.$secundario;
+        letter-spacing: 1.2;
+        transition: all .2s;
+        &:hover {
+            background-color: darken(#e1e1e1,20%);
+
+        }
+
     }
 }
