--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 75%;
     background-image: linear-gradient(to top,rgba(48, 48, 48, 0.8), rgba(0, 0, 0, 0.9))
-    ,url(../img/hero.jpg);
+    ,url(../img/hero2.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
