--- a/src/scss/contacto/_contacto.scss
+++ b/src/scss/contacto/_contacto.scss
@@ -9,6 +9,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
+
+    
     
     &__titulo {
         text-align: center;
@@ -21,7 +23,10 @@
     }
 
     &__formulario {
-        height: 60rem;
+        height: auto;
+        width: auto;
+        display: grid;
+        justify-content: center;
         background-image: linear-gradient(to bottom,rgba(48, 48, 48, 0.8), rgba(0, 0, 0, 0.9))
         ,url(../img/contacto.jpg);
         background-repeat: no-repeat;
@@ -29,10 +34,14 @@
         background-color: bottom bottom;
         margin: 5rem auto;
         padding: 2rem 8rem;
-        display: grid;
-        width: 70rem;
+        
         box-shadow: 1px 1px 20px rgb(0,0,0,0.6);
         border-radius: 4rem;
+        @include m.tablet { 
+            width: 70rem;
+            height: 60rem;
+            justify-content: unset;
+         }
     }
 
     &__label {
@@ -46,10 +55,12 @@
     &__input {
         margin: 1rem 0;
         border-radius: 5px;
+        padding: 1rem;
     }
 
     &__text {
         margin: 1rem 0;
+        padding: 1rem;
     }
     &__submit {
         padding: .5rem 2.5rem;
