--- a/src/scss/proyectos/_proyectos.scss
+++ b/src/scss/proyectos/_proyectos.scss
@@ -9,6 +9,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      
       gap: 5rem;
       @include m.tablet { 
         flex-direction: row;
@@ -26,6 +27,7 @@
     
     &__dropdown {
       position: relative;
+      
       @include m.tablet { 
         &:hover .proyecto__contenido {
           display: block;
@@ -33,19 +35,23 @@
       }
       
     }
-
+    &__imagen {
+      display: grid;
+      justify-items: center;
+    }
     &__contenido {
       display: none;
       position: absolute;
       background-color: #f1f1f1;
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-      transition: all .3s;
+      top: auto;
+      right: 40px;
+      
     }
     
     &__item {
       color: blue;
-      padding: 2rem 3rem;
+      padding: 1rem 2rem;
     }
 }
